[gd_scene load_steps=5 format=3 uid="uid://cew5sc3l33wxr"]

[ext_resource type="Script" uid="uid://iyrnbki3qk2a" path="res://vision.gd" id="1_frv7v"]
[ext_resource type="Script" uid="uid://bw1vvia0o5qqs" path="res://swarm_agent.gd" id="1_wxdti"]

[sub_resource type="CircleShape2D" id="CircleShape2D_frv7v"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ukipd"]
radius = 139.01

[node name="SwarmAgent" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_wxdti")
VISION_RADIUS = 80.0
SPEED = 200
density_distance = 23.872
cohesion_wt = 0.077
alignment_wt = 1.24
explore_separation_wt = 0.147
noise_wt = 0.055
diffusion_wt = 0.1
wall_avoid_wt_explore = 0.063
wall_avoid_wt_exploit = 0.093
sgf_timeout = 25

[node name="Sprite" type="Polygon2D" parent="."]
rotation = 1.5707964
scale = Vector2(0.45799488, 0.5070003)
color = Color(0, 0.78431374, 0, 1)
offset = Vector2(0, 6)
polygon = PackedVector2Array(0, -13, -8, 0, 0, -2.736842, 8, 0)

[node name="Collider" type="CollisionShape2D" parent="."]
scale = Vector2(0.45799488, 0.45799488)
shape = SubResource("CircleShape2D_frv7v")

[node name="Vision" type="Node2D" parent="."]
rotation = 1.5707964
script = ExtResource("1_frv7v")

[node name="Detection" type="Area2D" parent="Vision"]
collision_layer = 0
collision_mask = 2

[node name="DetectionShape" type="CollisionShape2D" parent="Vision/Detection"]
visible = false
shape = SubResource("CircleShape2D_ukipd")

[node name="RayLeft" type="RayCast2D" parent="Vision"]
target_position = Vector2(-14.000001, -23)

[node name="RayRight" type="RayCast2D" parent="Vision"]
target_position = Vector2(14.999999, -22)

[connection signal="body_entered" from="Vision/Detection" to="Vision" method="_on_body_entered"]
[connection signal="body_exited" from="Vision/Detection" to="Vision" method="_on_detection_body_exited"]
